# eures-scrape-AI-Rank

./: .gitignore  README.md  app.py  main.py  plan.md  pyproject.toml  rank_jobs.py  rank_llama_cpp.py
templates/: index.html  job_detail.html  stats.html
