[project]
name = "eures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "google-genai>=1.21.1",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "selenium>=4.33.0",
    "sentence-transformers>=4.1.0",
]
